Changes margin spacing on list view. Closes issue #220.

--- a/less/app.less
+++ b/less/app.less
@@ -818,7 +818,7 @@ footer {
         font-style: normal;
         font-size: 15px;
 		white-space: normal;
-		margin: 20px;
+		margin-bottom: 20px;
 		line-height: 1.5em;
 
         &.visible {
